# codex-temporal

./: .gitignore  CONTINUE_AS_NEW_DESIGN.md  Cargo.toml  DESIGN.md  README.md  REFACTORING.md  ROADMAP.md  build.rs
docs/: 00-index.md  00-overview.md  01-agent-loop.md  02-model-integration.md  03-tool-system.md  04-conversation-state.md  05-plan-mode.md  06-sub-agents.md  07-skills-prompts.md  08-configuration.md  09-extension-points.md
examples/: agent_worker.rs  simple_prompt.rs
src/: activities.rs  auth_stub.rs  config_loader.rs  entropy.rs  harness.rs  lib.rs  mcp.rs  models_stub.rs  picker.rs  session.rs  session_workflow.rs  sink.rs  startup.rs  storage.rs  streamer.rs  tools.rs  types.rs  unit_tests.rs  watcher.rs  workflow.rs
src/activities/: http_fetch.rs  mod.rs  model.rs
src/adapters/: entropy.rs  mod.rs
tests/: TODO_PTY_TESTS.md  e2e_test.rs  tui_e2e_test.rs  tui_pty_test.rs  unit_tests.rs
