[package]
name = "codex-temporal"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Temporal durable execution harness for OpenAI Codex CLI agent"
repository = "https://github.com/mfateev/codex-temporal"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

# Temporal Rust SDK — includes wait_condition waker fix
temporalio-sdk = { git = "https://github.com/mfateev/sdk-core.git", branch = "fix/wait-condition-wakers" }
temporalio-sdk-core = { git = "https://github.com/mfateev/sdk-core.git", branch = "fix/wait-condition-wakers" }
temporalio-client = { git = "https://github.com/mfateev/sdk-core.git", branch = "fix/wait-condition-wakers" }
temporalio-macros = { git = "https://github.com/mfateev/sdk-core.git", branch = "fix/wait-condition-wakers" }
temporalio-common = { git = "https://github.com/mfateev/sdk-core.git", branch = "fix/wait-condition-wakers" }

# Codex crates — local path for development
codex-core = { path = "../codex/codex-rs/core" }
codex-feedback = { path = "../codex/codex-rs/feedback" }
codex-protocol = { path = "../codex/codex-rs/protocol" }
codex-otel = { path = "../codex/codex-rs/otel" }
codex-tui = { path = "../codex/codex-rs/tui" }

# TUI dependencies (patched versions come via [patch.crates-io])
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { version = "0.29", features = ["unstable-widget-ref"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Patches required by codex-core/codex-tui transitive dependencies
[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[dev-dependencies]
temporalio-sdk-core = { git = "https://github.com/mfateev/sdk-core.git", branch = "fix/wait-condition-wakers", features = ["ephemeral-server"] }

[[bin]]
name = "codex-temporal-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "codex-temporal-client"
path = "src/bin/client.rs"

[[bin]]
name = "codex-temporal-tui"
path = "src/bin/tui.rs"
