[package]
name = "codex-temporal"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Temporal durable execution harness for OpenAI Codex CLI agent"
repository = "https://github.com/mfateev/codex-temporal"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
color-eyre = "0.6"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

# Temporal Rust SDK — task/rust-harness branch (master + continue_as_new_suggested fix)
temporalio-sdk = { git = "https://github.com/mfateev/sdk-core.git", branch = "task/rust-harness" }
temporalio-sdk-core = { git = "https://github.com/mfateev/sdk-core.git", branch = "task/rust-harness" }
temporalio-client = { git = "https://github.com/mfateev/sdk-core.git", branch = "task/rust-harness" }
temporalio-macros = { git = "https://github.com/mfateev/sdk-core.git", branch = "task/rust-harness" }
temporalio-common = { git = "https://github.com/mfateev/sdk-core.git", branch = "task/rust-harness" }

# Codex crates — local path for development
codex-core = { path = "../codex/codex-rs/core" }
codex-feedback = { path = "../codex/codex-rs/feedback" }
codex-protocol = { path = "../codex/codex-rs/protocol" }
codex-otel = { path = "../codex/codex-rs/otel" }
codex-tui = { path = "../codex/codex-rs/tui" }
codex-shell-command = { path = "../codex/codex-rs/shell-command" }
codex-apply-patch = { path = "../codex/codex-rs/apply-patch" }
codex-rmcp-client = { path = "../codex/codex-rs/rmcp-client" }
rmcp = { version = "0.15.0", default-features = false, features = ["base64", "macros", "schemars"] }


# Patches required by codex-core/codex-tui transitive dependencies
[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[dev-dependencies]
temporalio-sdk-core = { git = "https://github.com/mfateev/sdk-core.git", branch = "task/rust-harness", features = ["ephemeral-server"] }
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { version = "0.29", features = ["unstable-widget-ref"] }
tempfile = "3"

[[bin]]
name = "codex-temporal-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "codex-temporal-client"
path = "src/bin/client.rs"

[[bin]]
name = "codex-temporal-tui"
path = "src/bin/tui.rs"
